improve query and tests